# Neo-Tools

./: .gitignore  gradle.properties  gradlew  settings.gradle.kts  versions.properties
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro  release-key.jks  release-key.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Main.cpp
app/src/main/cpp/Includes/: obfuscate.h
app/src/main/cpp/apk/: apk_parser.cpp  apk_parser.hpp
app/src/main/cpp/crash/: CrashHandler.cpp  CrashHandler.hpp
app/src/main/cpp/encoding/: base64.cpp  base64.hpp  cpp_converter.cpp  cpp_converter.hpp
app/src/main/cpp/imageeditor/: adjustments.cpp  adjustments.hpp  bgremove.cpp  bgremove.hpp  crop.cpp  crop.hpp  drawing.cpp  drawing.hpp  filters.cpp  filters.hpp  shapes.cpp  shapes.hpp
app/src/main/java/com/neomods/tools/: MainActivity.kt  NeoToolsApplication.kt
app/src/main/java/com/neomods/tools/apk/: ApkInfoModels.kt  ApkInfoScreen.kt  ApkInfoViewModel.kt  ApkParser.kt  InspectorPanel.kt  ManifestViewerDialog.kt
app/src/main/java/com/neomods/tools/app/: BaseActivity.kt
app/src/main/java/com/neomods/tools/category/: CategoryViewModel.kt
app/src/main/java/com/neomods/tools/crash/: CrashActivity.kt  CrashHandler.kt  CrashReporter.kt
app/src/main/java/com/neomods/tools/model/: Category.kt  (+3 more)
app/src/main/res/drawable/: ic_arrow_back.xml  ic_arrow_forward.xml  ic_cat_apk.xml  ic_cat_binary.xml  ic_cat_crypto.xml  ic_cat_developer.xml  ic_cat_encoding.xml  ic_cat_image.xml  ic_cat_text.xml  ic_cat_xml.xml  ic_close.xml  ic_copy.xml  ic_file.xml  ic_image.xml  ic_launcher_foreground.xml  ic_perm_manage.xml  ic_perm_notification.xml  ic_perm_storage.xml  ic_save.xml  ic_search.xml  ic_settings.xml  ic_tool_base64.xml  ic_tool_build.xml  ic_tool_case.xml  ic_tool_certificate.xml  ic_tool_checksum.xml  ic_tool_convert.xml  ic_tool_default.xml  ic_tool_dex.xml  ic_tool_diff.xml  ic_tool_exif.xml  ic_tool_format.xml  ic_tool_hash.xml  ic_tool_hex.xml  ic_tool_http.xml  ic_tool_image_edit.xml  ic_tool_info.xml  ic_tool_json.xml  ic_tool_manifest.xml  ic_tool_manifest_edit.xml  (+11 more)
app/src/main/res/layout/: activity_crash.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/raw/: all_set.json
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
autobackgroundremover/: build.gradle.kts
autobackgroundremover/src/main/: AndroidManifest.xml
autobackgroundremover/src/main/java/com/slowmac/autobackgroundremover/: BackgroundRemoverUtils.kt
axmlprinter/: build.gradle  build.gradle.kts
gradle/: libs.versions.toml
photoeditor/: build.gradle  build.gradle.kts
photoeditor/src/main/java/ja/burhanrashid52/photoeditor/: DrawingView.kt
(+66 files in other folders)
